fix: update styles for label and checkbox components to align with design specifications

--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -238,6 +238,7 @@
     line-height: 100%;
     letter-spacing: 0px;
     text-align: center;
+    text-transform: uppercase;
   }
 
   * {
